test/end-to-end/runnable/pointer-to-mut-allocated.crow
import
	crow/io/print: out, print

main void() summon
	trusted
		x mut nat = 0
		get-x nat mut() = () =>
			x
		set-x void mut() = () =>
			x := 1

		out print "{get-x[]}"
		&x print-x

		set-x[]
		out print "{get-x[]}"
		&x print-x

print-x void(x nat*) summon, unsafe
	out print "{*x}"
